# Taller2-dispro

./: .gitignore  CMakeLists.txt  README.md  shift_register.html
Circuitos Secuenciales Digitales/Clocks/: Clocks.c  Clocks.h
Circuitos Secuenciales Digitales/Contadores Bits/: Contadores_4Bit.c  Contadores_Bits.h
Circuitos Secuenciales Digitales/Flip Flops/: FlipFlop_gate.c  FlipFlops.h
Funciones Principales/CambiosDeBase_Bus/: Bus_Hexa.c  CambioDeBases.h
Funciones Principales/Compuertas Logicas/: AND_gate.c  LogicGates.h  NOT_gate.c  OR_gate.c  XOR_gate.c
Funciones Principales/ImprimirCircuitosConsola/: CircuitosASCII.c  CircuitosASCII.h  Dibujar_ASCII.c  Dibujar_ASCII.h
Funciones Principales/WaveDrom Format/: FormatoWaveDrom.c  FormatoWaveDrom.h
SolucionTaller/Punto1/: Incrementador_Serial.c  Incrementador_Serial;_4Bits.c  Punto14.c  Punto15.c  Punto3.c  Registro_de_Desplazamiento.c  Run_Punto1.c  Run_Punto1.h  Sumador_Completo_8Bits.c
SolucionTaller/Punto2/: FlipFlopDataArduino.ino
SolucionTaller/Punto3/: FlipFlopDataArduino.ino  Run_Punto3.c  Run_Punto3.h  SN74HC595n.c  ard1ACSII.c
SolucionTaller/Punto4/: CodigoArduinoASCII.ino  SN74HC595n.c  ard1ACSII.c
SolucionTaller/Punto5/: Run_Punto5A.c  shiftregister.html
